--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_scaffolding.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_scaffolding.scss
@@ -1,6 +1,7 @@
 
 body {
 	line-height: 1.46;
+	overflow-x: hidden;
 }
 
 a {
